--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <div style= "color:black ">
+    <div style= "color:pink">
         <form action="{{ url_for('predict')}}" method="post">
             <h2>Sell-Car-O</h2>
             <h3>Please enter your car details</h3>
